tests/test_output.txt
============================= test session starts ==============================
platform darwin -- Python 3.14.2, pytest-9.0.2, pluggy-1.6.0 -- /Users/abhishek.dey/lakehouse-appkit/lakehouse-app/bin/python3.14
cachedir: .pytest_cache
rootdir: /Users/abhishek.dey/lakehouse-appkit
configfile: pyproject.toml
plugins: anyio-4.12.0, asyncio-1.3.0, cov-7.0.0
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 105 items

tests/test_adapters.py::TestDatabricksAdapterUnit::test_adapter_initialization PASSED [  0%]
tests/test_adapters.py::TestDatabricksAdapterUnit::test_adapter_initialization_no_warehouse PASSED [  1%]
tests/test_adapters.py::TestDatabricksAdapterUnit::test_execute_query_mock PASSED [  2%]
tests/test_adapters.py::TestDatabricksAdapterIntegration::test_connection FAILED [  3%]
tests/test_adapters.py::TestDatabricksAdapterIntegration::test_execute_query_integration FAILED [  4%]
tests/test_adapters.py::TestDatabricksAdapterIntegration::test_query_with_parameters FAILED [  5%]
tests/test_adapters.py::TestDatabricksAdapterIntegration::test_large_result_set FAILED [  6%]
tests/test_ai_scaffolding.py::TestAIProviders::test_template_provider PASSED [  7%]
tests/test_ai_scaffolding.py::TestAIProviders::test_openai_provider SKIPPED [  8%]
tests/test_ai_scaffolding.py::TestAIProviders::test_claude_provider SKIPPED [  9%]
tests/test_ai_scaffolding.py::TestAIProviders::test_gemini_provider SKIPPED [ 10%]
tests/test_ai_scaffolding.py::TestAIProviders::test_invalid_provider PASSED [ 11%]
tests/test_ai_scaffolding.py::TestTemplateProvider::test_generate_endpoint_template FAILED [ 12%]
tests/test_ai_scaffolding.py::TestTemplateProvider::test_generate_model_template FAILED [ 13%]
tests/test_ai_scaffolding.py::TestTemplateProvider::test_generate_service_template FAILED [ 14%]
tests/test_ai_scaffolding.py::TestAIScaffolder::test_scaffolder_initialization FAILED [ 15%]
tests/test_ai_scaffolding.py::TestAIScaffolder::test_generate_endpoint FAILED [ 16%]
tests/test_ai_scaffolding.py::TestAIScaffolder::test_generate_model FAILED [ 17%]
tests/test_ai_scaffolding.py::TestAIScaffolder::test_generate_service FAILED [ 18%]
tests/test_ai_scaffolding.py::TestAIScaffolder::test_code_validation FAILED [ 19%]
tests/test_ai_scaffolding.py::TestAIProvidersIntegration::test_openai_generation SKIPPED [ 20%]
tests/test_ai_scaffolding.py::TestAIProvidersIntegration::test_claude_generation SKIPPED [ 20%]
tests/test_ai_scaffolding.py::TestAIProvidersIntegration::test_gemini_generation SKIPPED [ 21%]
tests/test_ai_scaffolding.py::TestAISafety::test_forbidden_patterns FAILED [ 22%]
tests/test_ai_scaffolding.py::TestAISafety::test_code_length_limits FAILED [ 23%]
tests/test_ai_scaffolding.py::TestAISafety::test_safe_code_patterns FAILED [ 24%]
tests/test_auth.py::TestAuthContext::test_auth_context_creation PASSED   [ 25%]
tests/test_auth.py::TestAuthContext::test_has_role PASSED                [ 26%]
tests/test_auth.py::TestAuthContext::test_has_permission PASSED          [ 27%]
tests/test_auth.py::TestAuthContext::test_has_any_role PASSED            [ 28%]
tests/test_auth.py::TestAuthContext::test_has_all_permissions PASSED     [ 29%]
tests/test_auth.py::TestAuthManager::test_auth_manager_initialization PASSED [ 30%]
tests/test_auth.py::TestAuthManager::test_create_auth_context PASSED     [ 31%]
tests/test_auth.py::TestAuthManager::test_get_auth_manager_singleton PASSED [ 32%]
tests/test_auth.py::TestAuthManager::test_validate_token PASSED          [ 33%]
tests/test_auth.py::TestAuthManager::test_generate_token PASSED          [ 34%]
tests/test_auth.py::TestPermissionDecorators::test_require_role_decorator PASSED [ 35%]
tests/test_auth.py::TestPermissionDecorators::test_require_permission_decorator PASSED [ 36%]
tests/test_cli.py::TestCLIMain::test_cli_help PASSED                     [ 37%]
tests/test_cli.py::TestCLIMain::test_cli_version PASSED                  [ 38%]
tests/test_cli.py::TestCreateCommand::test_create_help PASSED            [ 39%]
tests/test_cli.py::TestCreateCommand::test_create_app PASSED             [ 40%]
tests/test_cli.py::TestInitCommand::test_init_help PASSED                [ 40%]
tests/test_cli.py::TestInitCommand::test_init_config PASSED              [ 41%]
tests/test_cli.py::TestAICommands::test_ai_help PASSED                   [ 42%]
tests/test_cli.py::TestAICommands::test_ai_endpoint_help PASSED          [ 43%]
tests/test_cli.py::TestAICommands::test_ai_providers_help PASSED         [ 44%]
tests/test_cli.py::TestUCCommands::test_uc_help PASSED                   [ 45%]
tests/test_cli.py::TestUCCommands::test_uc_list_catalogs_help PASSED     [ 46%]
tests/test_cli.py::TestUCCommands::test_uc_search_help PASSED            [ 47%]
tests/test_integration.py::TestFastAPIIntegration::test_health_endpoint PASSED [ 48%]
tests/test_integration.py::TestFastAPIIntegration::test_uc_catalogs_endpoint PASSED [ 49%]
tests/test_integration.py::TestCompleteWorkflows::test_data_discovery_workflow FAILED [ 50%]
tests/test_integration.py::TestCompleteWorkflows::test_table_inspection_workflow FAILED [ 51%]
tests/test_integration.py::TestCompleteWorkflows::test_search_and_inspect_workflow FAILED [ 52%]
tests/test_query_builder.py::test_simple_select PASSED                   [ 53%]
tests/test_query_builder.py::test_select_with_columns PASSED             [ 54%]
tests/test_query_builder.py::test_select_with_where PASSED               [ 55%]
tests/test_query_builder.py::test_select_with_join PASSED                [ 56%]
tests/test_query_builder.py::test_select_with_group_by PASSED            [ 57%]
tests/test_query_builder.py::test_select_with_order_by PASSED            [ 58%]
tests/test_query_builder.py::test_select_with_limit PASSED               [ 59%]
tests/test_query_builder.py::test_select_with_offset PASSED              [ 60%]
tests/test_query_builder.py::test_complex_query PASSED                   [ 60%]
tests/test_query_builder.py::test_query_params PASSED                    [ 61%]
tests/test_query_builder.py::test_reset_builder PASSED                   [ 62%]
tests/test_query_builder.py::test_missing_from_clause PASSED             [ 63%]
tests/test_sdk.py::TestSDKModels::test_base_model_creation PASSED        [ 64%]
tests/test_sdk.py::TestSDKModels::test_model_validation PASSED           [ 65%]
tests/test_sdk.py::TestSDKModels::test_model_serialization PASSED        [ 66%]
tests/test_sdk.py::TestQueryBuilder::test_query_builder_initialization PASSED [ 67%]
tests/test_sdk.py::TestQueryBuilder::test_select_query PASSED            [ 68%]
tests/test_sdk.py::TestQueryBuilder::test_select_with_columns PASSED     [ 69%]
tests/test_sdk.py::TestQueryBuilder::test_where_clause PASSED            [ 70%]
tests/test_sdk.py::TestQueryBuilder::test_multiple_where_clauses PASSED  [ 71%]
tests/test_sdk.py::TestQueryBuilder::test_order_by PASSED                [ 72%]
tests/test_sdk.py::TestQueryBuilder::test_limit PASSED                   [ 73%]
tests/test_sdk.py::TestQueryBuilder::test_join PASSED                    [ 74%]
tests/test_sdk.py::TestQueryBuilder::test_complex_query PASSED           [ 75%]
tests/test_sdk.py::TestSDKUtils::test_sanitize_sql_identifier PASSED     [ 76%]
tests/test_sdk.py::TestSDKUtils::test_format_sql_value PASSED            [ 77%]
tests/test_sdk.py::TestSDKExceptions::test_base_exception PASSED         [ 78%]
tests/test_sdk.py::TestSDKExceptions::test_query_execution_exception PASSED [ 79%]
tests/test_sdk.py::TestSDKExceptions::test_validation_exception PASSED   [ 80%]
tests/test_sdk.py::TestSDKExceptions::test_exception_inheritance PASSED  [ 80%]
tests/test_unity_catalog.py::TestUnityCatalogModels::test_uc_catalog_model PASSED [ 81%]
tests/test_unity_catalog.py::TestUnityCatalogModels::test_uc_schema_model PASSED [ 82%]
tests/test_unity_catalog.py::TestUnityCatalogModels::test_uc_table_model PASSED [ 83%]
tests/test_unity_catalog.py::TestUnityCatalogModels::test_uc_column_model PASSED [ 84%]
tests/test_unity_catalog.py::TestUnityCatalogManagerUnit::test_list_catalogs PASSED [ 85%]
tests/test_unity_catalog.py::TestUnityCatalogManagerUnit::test_list_schemas PASSED [ 86%]
tests/test_unity_catalog.py::TestUnityCatalogManagerUnit::test_list_tables PASSED [ 87%]
tests/test_unity_catalog.py::TestUnityCatalogManagerUnit::test_search_tables PASSED [ 88%]
tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_list_catalogs_integration FAILED [ 89%]
tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_list_schemas_integration FAILED [ 90%]
tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_list_tables_integration FAILED [ 91%]
tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_table_details_integration FAILED [ 92%]
tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_table_sample_integration FAILED [ 93%]
tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_table_stats_integration FAILED [ 94%]
tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_search_tables_integration FAILED [ 95%]
tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_catalog_tree_integration FAILED [ 96%]
tests/test_unity_catalog.py::TestUnityCatalogAPI::test_list_catalogs_endpoint SKIPPED [ 97%]
tests/test_unity_catalog.py::TestUnityCatalogAPI::test_list_schemas_endpoint SKIPPED [ 98%]
tests/test_unity_catalog.py::TestUnityCatalogCLI::test_list_catalogs_cli PASSED [ 99%]
tests/test_unity_catalog.py::TestUnityCatalogCLI::test_search_cli PASSED [100%]/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestCompleteWorkflows.test_data_discovery_workflow' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestCompleteWorkflows.test_table_inspection_workflow' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestCompleteWorkflows.test_search_and_inspect_workflow' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestUnityCatalogIntegration.test_list_catalogs_integration' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestUnityCatalogIntegration.test_list_schemas_integration' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestUnityCatalogIntegration.test_list_tables_integration' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestUnityCatalogIntegration.test_get_table_details_integration' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestUnityCatalogIntegration.test_get_table_sample_integration' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestUnityCatalogIntegration.test_get_table_stats_integration' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestUnityCatalogIntegration.test_search_tables_integration' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback
/Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/coverage/parser.py:432: RuntimeWarning: coroutine 'TestUnityCatalogIntegration.test_get_catalog_tree_integration' was never awaited
  self.code = compile(text, filename, "exec", dont_inherit=True)
RuntimeWarning: Enable tracemalloc to get the object allocation traceback


=================================== FAILURES ===================================
_______________ TestDatabricksAdapterIntegration.test_connection _______________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
_______ TestDatabricksAdapterIntegration.test_execute_query_integration ________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
_________ TestDatabricksAdapterIntegration.test_query_with_parameters __________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
____________ TestDatabricksAdapterIntegration.test_large_result_set ____________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
_____________ TestTemplateProvider.test_generate_endpoint_template _____________
tests/test_ai_scaffolding.py:72: in test_generate_endpoint_template
    code = await provider.generate_code(
E   TypeError: TemplateProvider.generate_code() got an unexpected keyword argument 'code_type'
______________ TestTemplateProvider.test_generate_model_template _______________
tests/test_ai_scaffolding.py:86: in test_generate_model_template
    code = await provider.generate_code(
E   TypeError: TemplateProvider.generate_code() got an unexpected keyword argument 'code_type'
_____________ TestTemplateProvider.test_generate_service_template ______________
tests/test_ai_scaffolding.py:98: in test_generate_service_template
    provider = TemplateProvider()
               ^^^^^^^^^^^^^^^^^^
E   TypeError: BaseAIProvider.__init__() missing 1 required positional argument: 'config'
_______________ TestAIScaffolder.test_scaffolder_initialization ________________
tests/test_ai_scaffolding.py:120: in test_scaffolder_initialization
    scaffolder = AIScaffolder(provider="template")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
___________________ TestAIScaffolder.test_generate_endpoint ____________________
tests/test_ai_scaffolding.py:127: in test_generate_endpoint
    scaffolder = AIScaffolder(provider="template")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
_____________________ TestAIScaffolder.test_generate_model _____________________
tests/test_ai_scaffolding.py:141: in test_generate_model
    scaffolder = AIScaffolder(provider="template")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
____________________ TestAIScaffolder.test_generate_service ____________________
tests/test_ai_scaffolding.py:156: in test_generate_service
    scaffolder = AIScaffolder(provider="template")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
____________________ TestAIScaffolder.test_code_validation _____________________
tests/test_ai_scaffolding.py:169: in test_code_validation
    scaffolder = AIScaffolder(provider="template")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
_____________________ TestAISafety.test_forbidden_patterns _____________________
tests/test_ai_scaffolding.py:258: in test_forbidden_patterns
    scaffolder = AIScaffolder(provider="template")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
_____________________ TestAISafety.test_code_length_limits _____________________
tests/test_ai_scaffolding.py:273: in test_code_length_limits
    scaffolder = AIScaffolder(provider="template")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
_____________________ TestAISafety.test_safe_code_patterns _____________________
tests/test_ai_scaffolding.py:282: in test_safe_code_patterns
    scaffolder = AIScaffolder(provider="template")
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
______________ TestCompleteWorkflows.test_data_discovery_workflow ______________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
_____________ TestCompleteWorkflows.test_table_inspection_workflow _____________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
____________ TestCompleteWorkflows.test_search_and_inspect_workflow ____________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
__________ TestUnityCatalogIntegration.test_list_catalogs_integration __________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
__________ TestUnityCatalogIntegration.test_list_schemas_integration ___________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
___________ TestUnityCatalogIntegration.test_list_tables_integration ___________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
________ TestUnityCatalogIntegration.test_get_table_details_integration ________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
________ TestUnityCatalogIntegration.test_get_table_sample_integration _________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
_________ TestUnityCatalogIntegration.test_get_table_stats_integration _________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
__________ TestUnityCatalogIntegration.test_search_tables_integration __________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
________ TestUnityCatalogIntegration.test_get_catalog_tree_integration _________
async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
=============================== warnings summary ===============================
lakehouse_appkit/sdk/auth.py:32
  /Users/abhishek.dey/lakehouse-appkit/lakehouse_appkit/sdk/auth.py:32: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    created_at: datetime = datetime.utcnow()

lakehouse_appkit/config.py:19
  /Users/abhishek.dey/lakehouse-appkit/lakehouse_appkit/config.py:19: UserWarning: Field name "schema" in "DatabricksConfig" shadows an attribute in parent "BaseModel"
    class DatabricksConfig(BaseModel):

lakehouse_appkit/config.py:30
  /Users/abhishek.dey/lakehouse-appkit/lakehouse_appkit/config.py:30: UserWarning: Field name "schema" in "UnityCatalogConfig" shadows an attribute in parent "BaseModel"
    class UnityCatalogConfig(BaseModel):

lakehouse_appkit/sdk/models.py:32
  /Users/abhishek.dey/lakehouse-appkit/lakehouse_appkit/sdk/models.py:32: UserWarning: Field name "schema" in "TableSchema" shadows an attribute in parent "BaseModel"
    class TableSchema(BaseModel):

tests/test_adapters.py::TestDatabricksAdapterIntegration::test_connection
  tests/test_adapters.py:69: PytestWarning: The test <Function test_connection> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_databricks()

tests/test_adapters.py::TestDatabricksAdapterIntegration::test_execute_query_integration
  tests/test_adapters.py:80: PytestWarning: The test <Function test_execute_query_integration> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_databricks()

tests/test_adapters.py::TestDatabricksAdapterIntegration::test_query_with_parameters
  tests/test_adapters.py:89: PytestWarning: The test <Function test_query_with_parameters> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_databricks()

tests/test_adapters.py::TestDatabricksAdapterIntegration::test_large_result_set
  tests/test_adapters.py:98: PytestWarning: The test <Function test_large_result_set> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_databricks()

tests/test_ai_scaffolding.py::TestAIProvidersIntegration::test_openai_generation
  tests/test_ai_scaffolding.py:189: PytestWarning: The test <Function test_openai_generation> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_ai_provider("openai")

tests/test_ai_scaffolding.py::TestAIProvidersIntegration::test_claude_generation
  tests/test_ai_scaffolding.py:208: PytestWarning: The test <Function test_claude_generation> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_ai_provider("claude")

tests/test_ai_scaffolding.py::TestAIProvidersIntegration::test_gemini_generation
  tests/test_ai_scaffolding.py:227: PytestWarning: The test <Function test_gemini_generation> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_ai_provider("gemini")

tests/test_integration.py::TestFastAPIIntegration::test_health_endpoint
  /Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/pydantic/v1/types.py:159: RuntimeWarning: coroutine 'TestDatabricksAdapterIntegration.test_connection' was never awaited
    new_cls = cast('ConstrainedInt', type.__new__(cls, name, bases, dct))
  Enable tracemalloc to get traceback where the object was allocated.
  See https://docs.pytest.org/en/stable/how-to/capture-warnings.html#resource-warnings for more info.

tests/test_integration.py::TestFastAPIIntegration::test_health_endpoint
  /Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/pydantic/v1/types.py:159: RuntimeWarning: coroutine 'TestDatabricksAdapterIntegration.test_execute_query_integration' was never awaited
    new_cls = cast('ConstrainedInt', type.__new__(cls, name, bases, dct))
  Enable tracemalloc to get traceback where the object was allocated.
  See https://docs.pytest.org/en/stable/how-to/capture-warnings.html#resource-warnings for more info.

tests/test_integration.py::TestFastAPIIntegration::test_health_endpoint
  /Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/pydantic/v1/types.py:159: RuntimeWarning: coroutine 'TestDatabricksAdapterIntegration.test_query_with_parameters' was never awaited
    new_cls = cast('ConstrainedInt', type.__new__(cls, name, bases, dct))
  Enable tracemalloc to get traceback where the object was allocated.
  See https://docs.pytest.org/en/stable/how-to/capture-warnings.html#resource-warnings for more info.

tests/test_integration.py::TestFastAPIIntegration::test_health_endpoint
  /Users/abhishek.dey/lakehouse-appkit/lakehouse-app/lib/python3.14/site-packages/pydantic/v1/types.py:159: RuntimeWarning: coroutine 'TestDatabricksAdapterIntegration.test_large_result_set' was never awaited
    new_cls = cast('ConstrainedInt', type.__new__(cls, name, bases, dct))
  Enable tracemalloc to get traceback where the object was allocated.
  See https://docs.pytest.org/en/stable/how-to/capture-warnings.html#resource-warnings for more info.

tests/test_integration.py::TestCompleteWorkflows::test_data_discovery_workflow
  tests/test_integration.py:43: PytestWarning: The test <Function test_data_discovery_workflow> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_integration.py::TestCompleteWorkflows::test_table_inspection_workflow
  tests/test_integration.py:63: PytestWarning: The test <Function test_table_inspection_workflow> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_integration.py::TestCompleteWorkflows::test_search_and_inspect_workflow
  tests/test_integration.py:96: PytestWarning: The test <Function test_search_and_inspect_workflow> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_sdk.py::TestSDKModels::test_model_serialization
  /Users/abhishek.dey/lakehouse-appkit/tests/test_sdk.py:68: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
    data = model.dict()

tests/test_sdk.py::TestSDKModels::test_model_serialization
  /Users/abhishek.dey/lakehouse-appkit/tests/test_sdk.py:73: PydanticDeprecatedSince20: The `json` method is deprecated; use `model_dump_json` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
    json_str = model.json()

tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_list_catalogs_integration
  tests/test_unity_catalog.py:165: PytestWarning: The test <Function test_list_catalogs_integration> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_list_schemas_integration
  tests/test_unity_catalog.py:176: PytestWarning: The test <Function test_list_schemas_integration> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_list_tables_integration
  tests/test_unity_catalog.py:187: PytestWarning: The test <Function test_list_tables_integration> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_table_details_integration
  tests/test_unity_catalog.py:196: PytestWarning: The test <Function test_get_table_details_integration> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_table_sample_integration
  tests/test_unity_catalog.py:214: PytestWarning: The test <Function test_get_table_sample_integration> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_table_stats_integration
  tests/test_unity_catalog.py:230: PytestWarning: The test <Function test_get_table_stats_integration> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_search_tables_integration
  tests/test_unity_catalog.py:245: PytestWarning: The test <Function test_search_tables_integration> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_catalog_tree_integration
  tests/test_unity_catalog.py:255: PytestWarning: The test <Function test_get_catalog_tree_integration> is marked with '@pytest.mark.asyncio' but it is not an async function. Please remove the asyncio mark. If the test is not marked explicitly, check for global marks applied via 'pytestmark'.
    @skip_if_no_unity_catalog()

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
================================ tests coverage ================================
_______________ coverage: platform darwin, python 3.14.2-final-0 _______________

Name                                                Stmts   Miss  Cover   Missing
---------------------------------------------------------------------------------
lakehouse_appkit/__init__.py                            1      0   100%
lakehouse_appkit/adapters/__init__.py                   0      0   100%
lakehouse_appkit/adapters/databricks.py                84     61    27%   15-19, 66-90, 94-102, 110-137, 145-163, 167-177, 181-194, 206-216
lakehouse_appkit/cli/__init__.py                        0      0   100%
lakehouse_appkit/cli/commands/__init__.py               0      0   100%
lakehouse_appkit/cli/commands/add.py                   21     21     0%   4-46
lakehouse_appkit/cli/commands/ai.py                   163    113    31%   71-107, 136-160, 188-212, 239-263, 302-340, 346-397, 403-449
lakehouse_appkit/cli/commands/ai_providers_cmd.py      38     38     0%   1-62
lakehouse_appkit/cli/commands/create.py                60      4    93%   34-35, 404-405
lakehouse_appkit/cli/commands/deploy.py                16     16     0%   4-43
lakehouse_appkit/cli/commands/init.py                  11      2    82%   16-17
lakehouse_appkit/cli/commands/run.py                   12     12     0%   4-30
lakehouse_appkit/cli/commands/uc.py                   239    164    31%   31-54, 65-92, 103-130, 141-179, 191-217, 230-256, 269-293, 301-336, 346-373, 377
lakehouse_appkit/cli/main.py                           60     14    77%   81-87, 105-111, 130-136, 149
lakehouse_appkit/config.py                             61     10    84%   99-109, 174, 216
lakehouse_appkit/sdk/__init__.py                        0      0   100%
lakehouse_appkit/sdk/ai_providers.py                  139     92    34%   48, 68, 72, 94, 103-130, 137, 146-173, 180, 189-218, 236, 250, 252, 254, 258, 268-338, 357-472
lakehouse_appkit/sdk/ai_scaffold.py                   192    146    24%   70-80, 93-114, 119-146, 160-170, 174-179, 184-195, 199-222, 227-253, 268-288, 300-309, 324-333, 347-356, 367-375, 388, 450-524, 551, 661, 712-717, 746, 804, 813, 841-849
lakehouse_appkit/sdk/auth.py                           91     45    51%   37-39, 44, 50, 97-115, 134-143, 155-158, 183-199, 212-222, 235-245, 277-282
lakehouse_appkit/sdk/base.py                           34     11    68%   34, 43, 61, 79, 92, 105, 119, 128, 132-133, 137
lakehouse_appkit/sdk/exceptions.py                     16      0   100%
lakehouse_appkit/sdk/models.py                         36      0   100%
lakehouse_appkit/sdk/query.py                          71      1    99%   176
lakehouse_appkit/sdk/utils.py                          63     38    40%   20-26, 40-45, 58-69, 83-92, 107-113, 127-128, 143-144, 201-205
lakehouse_appkit/templates/__init__.py                  0      0   100%
lakehouse_appkit/unity_catalog/__init__.py            230    113    51%   257-309, 358-361, 380-404, 426-452, 476-493, 502-535, 556-559, 578-599
lakehouse_appkit/unity_catalog/routes.py               88     55    38%   45-49, 67-71, 93-97, 119-123, 147-151, 173-177, 199-203, 225-229, 249-253, 271-279, 293-297
---------------------------------------------------------------------------------
TOTAL                                                1726    956    45%
=========================== short test summary info ============================
FAILED tests/test_adapters.py::TestDatabricksAdapterIntegration::test_connection - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_adapters.py::TestDatabricksAdapterIntegration::test_execute_query_integration - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_adapters.py::TestDatabricksAdapterIntegration::test_query_with_parameters - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_adapters.py::TestDatabricksAdapterIntegration::test_large_result_set - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_ai_scaffolding.py::TestTemplateProvider::test_generate_endpoint_template - TypeError: TemplateProvider.generate_code() got an unexpected keyword argument 'code_type'
FAILED tests/test_ai_scaffolding.py::TestTemplateProvider::test_generate_model_template - TypeError: TemplateProvider.generate_code() got an unexpected keyword argument 'code_type'
FAILED tests/test_ai_scaffolding.py::TestTemplateProvider::test_generate_service_template - TypeError: BaseAIProvider.__init__() missing 1 required positional argument: 'config'
FAILED tests/test_ai_scaffolding.py::TestAIScaffolder::test_scaffolder_initialization - TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
FAILED tests/test_ai_scaffolding.py::TestAIScaffolder::test_generate_endpoint - TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
FAILED tests/test_ai_scaffolding.py::TestAIScaffolder::test_generate_model - TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
FAILED tests/test_ai_scaffolding.py::TestAIScaffolder::test_generate_service - TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
FAILED tests/test_ai_scaffolding.py::TestAIScaffolder::test_code_validation - TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
FAILED tests/test_ai_scaffolding.py::TestAISafety::test_forbidden_patterns - TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
FAILED tests/test_ai_scaffolding.py::TestAISafety::test_code_length_limits - TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
FAILED tests/test_ai_scaffolding.py::TestAISafety::test_safe_code_patterns - TypeError: AIScaffolder.__init__() got an unexpected keyword argument 'provider'
FAILED tests/test_integration.py::TestCompleteWorkflows::test_data_discovery_workflow - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_integration.py::TestCompleteWorkflows::test_table_inspection_workflow - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_integration.py::TestCompleteWorkflows::test_search_and_inspect_workflow - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_list_catalogs_integration - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_list_schemas_integration - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_list_tables_integration - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_table_details_integration - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_table_sample_integration - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_table_stats_integration - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_search_tables_integration - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
FAILED tests/test_unity_catalog.py::TestUnityCatalogIntegration::test_get_catalog_tree_integration - Failed: async def functions are not natively supported.
You need to install a suitable plugin for your async framework, for example:
  - anyio
  - pytest-asyncio
  - pytest-tornasync
  - pytest-trio
  - pytest-twisted
============ 26 failed, 71 passed, 8 skipped, 28 warnings in 0.69s =============
